# xyrachat

./: .env.example  .gitignore  CLAUDE.md  DESKTOP.md  README.md  XYRACHAT_ARCHITECTURE.md  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vercel.json
.claude/: settings.local.json
.github/: dependabot.yml
_docs/: calendar-integration-design.md  email-templates.md  government-request-policy.md  help-center-content.md  key-rotation.md  launch-checklist.md  launch-runbook.md  llm-deprecation.md  marketing-prompts.md  marketing-website-prompt.md  meta-app-review-submission.md  meta-app-review.md  meta-screencast-scripts.md  mobile-submission-checklist.md  staging-setup.md  supabase-email-templates.md  support-access-design.md  team-roles-design.md  tutorial-video-scripts.md  vps-n8n-setup.md  website-update-prompt.md
app/: global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx
backend/: .env.example  package-lock.json  package.json  tsconfig.json
components/: chunk-reloader.tsx  posthog-provider.tsx
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md  ROADMAP.md
e2e/: smoke.spec.ts
frontend/: .env.production  next.config.js  package-lock.json  package.json  tailwind.config.ts
lib/: analytics-server.ts  analytics.ts  (+5 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+611 files in other folders)
