[package]
name = "xyra-chat"
version = "0.1.0"
description = "Xyra Chat — desktop"
authors = ["Mll Studio"]
edition = "2021"
rust-version = "1.77.2"
default-run = "xyra-chat"

[lib]
name = "xyra_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Desktop-only plugins (window state, native dialogs, auto-updater).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"

[[bin]]
name = "xyra-chat"
path = "src/main.rs"
